objects/dataloader3935__c.object
<CustomObject>
    <fields>
        <fullName>AccountDataload__c</fullName>
        <label>AccountDataload</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>dataloader3935s</relationshipLabel>
        <relationshipName>dataloader3935s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>permissiontesting1__c</fullName>
        <label>permissiontesting1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>permissiontesting2__c</fullName>
        <label>permissiontesting2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>dataloader3935</label>
    <nameField>
        <label>dataloader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>dataloader3935s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>